Colab kullanılarak oluşturuldu

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
         "outputId": "f498bdbc-68e4-4445-9e4f-9aea143f33d6"
       },
       "id": "hhL6x23bW1CK",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,8 +58,8 @@
       "cell_type": "code",
       "source": [
         "!curl -o ./data/train.h5 https://zenodo.org/records/10119316/files/train.h5\n",
-        "!curl -o ./datatest.h5 https://zenodo.org/records/10119316/files/test.h5\n",
-        "!curl -o ./dataval.h5 https://zenodo.org/records/10119316/files/val.h5"
+        "!curl -o ./data/test.h5 https://zenodo.org/records/10119316/files/test.h5\n",
+        "!curl -o ./data/val.h5 https://zenodo.org/records/10119316/files/val.h5"
       ],
       "metadata": {
         "colab": {
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "34a5c907",
       "metadata": {
         "id": "34a5c907"
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "c60faf40",
       "metadata": {
         "id": "c60faf40"
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "85e743d0",
       "metadata": {
         "id": "85e743d0"
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "98d9190b",
       "metadata": {
         "colab": {
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "0ce2b42f",
       "metadata": {
         "colab": {
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "b7934a10",
       "metadata": {
         "id": "b7934a10"
@@ -261,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "cb701191",
       "metadata": {
         "id": "cb701191"
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "12b6ab18",
       "metadata": {
         "colab": {
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "969e9e5b",
       "metadata": {
         "colab": {
@@ -410,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "a0941813",
       "metadata": {
         "colab": {
@@ -451,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "2934bebd",
       "metadata": {
         "id": "2934bebd"
@@ -466,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "2203eb0b",
       "metadata": {
         "colab": {
@@ -493,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "529018a9",
       "metadata": {
         "colab": {
@@ -530,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "cc3a658b",
       "metadata": {
         "colab": {
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "d977541c",
       "metadata": {
         "id": "d977541c"
@@ -612,7 +612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "3b4662ac",
       "metadata": {
         "id": "3b4662ac"
@@ -646,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "e7900072",
       "metadata": {
         "id": "e7900072"
@@ -673,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "366090c3",
       "metadata": {
         "id": "366090c3"
@@ -736,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "85e30f4e",
       "metadata": {
         "colab": {
@@ -907,7 +907,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "L4"
+      "gpuType": "T4"
     },
     "accelerator": "GPU"
   },
