--- a/main.ipynb
+++ b/main.ipynb
@@ -66,7 +66,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W0OPIMPjM43b",
-        "outputId": "270d9546-05fa-4624-fd73-b7685370dabd"
+        "outputId": "fe2daa99-2932-4c6f-8666-f8161bc7aa98"
       },
       "id": "W0OPIMPjM43b",
       "execution_count": null,
@@ -77,7 +77,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            " 37 24.9G   37 9572M    0     0  15.9M      0  0:26:44  0:10:01  0:16:43 15.6M"
+            " 56 24.9G   56 13.9G    0     0  11.5M      0  0:36:43  0:20:36  0:16:07 12.6M"
           ]
         }
       ]
@@ -268,17 +268,27 @@
       },
       "outputs": [],
       "source": [
-        "transforms = torchvision.transforms.Compose(\n",
-        "    [\n",
-        "        torchvision.transforms.ToTensor(),\n",
-        "        torchvision.transforms.Resize((180, 180), antialias=True),\n",
-        "        torch.nn.ReLU(inplace=True),  # remove negative values if any\n",
-        "        torchvision.transforms.Lambda(lambda x: torch.log(x + 1.0)),\n",
-        "        torchvision.transforms.Lambda(\n",
-        "            lambda x: x / torch.max(x) if torch.max(x) > 0 else x\n",
-        "        ),\n",
-        "    ]\n",
-        ")\n",
+        "# transforms = torchvision.transforms.Compose(\n",
+        "#     [\n",
+        "#         torchvision.transforms.ToTensor(),\n",
+        "#         torchvision.transforms.Resize((180, 180), antialias=True),\n",
+        "#         torch.nn.ReLU(inplace=True),  # remove negative values if any\n",
+        "#         torchvision.transforms.Lambda(lambda x: torch.log(x + 1.0)),\n",
+        "#         torchvision.transforms.Lambda(\n",
+        "#             lambda x: x / torch.max(x) if torch.max(x) > 0 else x\n",
+        "#         ),\n",
+        "#     ]\n",
+        "# )\n",
+        "\n",
+        "transforms = torchvision.transforms.Compose([\n",
+        "    torchvision.transforms.ToTensor(),\n",
+        "    torchvision.transforms.Resize((180, 180), antialias=True),\n",
+        "    torchvision.transforms.Lambda(lambda x: torch.log(x + 1.0)),  # optional\n",
+        "    torchvision.transforms.Lambda(lambda x: x / torch.max(x) if torch.max(x) > 0 else x),  # optional\n",
+        "    torchvision.transforms.Normalize(mean=[0.5], std=[0.5])  # 🔥 Add this at the end\n",
+        "])\n",
+        "\n",
+        "\n",
         "train_data = H5Dataset(\"./data/train.h5\")\n",
         "test_data = H5Dataset(\"./data/test.h5\")\n",
         "val_data = H5Dataset(\"./data/val.h5\")"
@@ -721,7 +731,7 @@
         "model = model.to(device)\n",
         "\n",
         "loss_func = nn.CrossEntropyLoss()\n",
-        "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.8)"
+        "optimizer = optim.Adam(model.parameters(), lr=1e-3)\n"
       ]
     },
     {
